--- a/Facing.css
+++ b/Facing.css
@@ -1,13 +1,15 @@
 * {
-    margin: 0; /* Убирает отступы по умолчанию у всех элементов */
-    padding: 0; /* Убирает внутренние отступы у всех элементов */
-    box-sizing: border-box; /* Изменяет модель коробки, чтобы ширина и высота включали padding и border */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
 }
 
 body {
-    font-family: 'Roboto', Arial, sans-serif; /* Устанавливает шрифт для текста на странице */
-    line-height: 1.5; /* Задает межстрочный интервал */
-    color: #333; /* Задает основной цвет текста */
+    font-family: 'Roboto', Arial, sans-serif;
+    line-height: 1.5;
+    color: #333;
+    overflow-x: hidden; /* Предотвращает горизонтальную прокрутку */
 }
 
 header {
@@ -15,14 +17,12 @@ header {
     align-items: center;
     justify-content: space-between;
     background-color: #03030300;
-    padding: 30px 50px;
+    padding: 15px; /* Уменьшите padding для мобильных устройств */
     margin: 0;
     color: rgba(0, 0, 0, 0);
     border-radius: 0.5px;
-    border-bottom: 1px solid #76727274; /* Добавляем границу снизу */
-    
+    border-bottom: 1px solid #76727274;
 }
-
 
 .logo {
     text-align: center;
@@ -31,128 +31,117 @@ header {
     color: black;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 100; /* Убирает лишнюю жирность шрифта */
-    letter-spacing: 1px; /* Уменьшает интервал между буквами */
-    
-   
+    letter-spacing: 1px; /* Уменьшает интервал между буквами */ 
 }
 
-
 .search-bar {
-    flex: 1; /* Заставляет блок занимать всё доступное пространство */
-    margin: 0 100px; /* Добавляет отступы слева и справа от панели поиска */
-    display: flex; /* Использует flexbox для выравнивания содержимого внутри панели поиска */
-    align-items: center; /* Выравнивает элементы по вертикали по центру */
-    border-bottom: 1px solid #333; /* Добавляем границу снизу */
+    flex: 1;
+    margin: 0 40px; /* Уменьшите отступы */
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #333;
 }
 
 .search-bar input {
-    width: 100%; /* Заставляет поле ввода занимать всю доступную ширину */
-    padding: 8px 12px; /* Добавляет внутренние отступы в поле ввода */
-    border-radius: 20px; /* Скругляет углы поля ввода */
-    border: none; /* Убирает границу вокруг поля ввода */
-    outline: none; /* Убирает обводку при фокусе */
-    font-size: 16px; /* Задает размер шрифта в поле ввода */
-    
+    width: 80%;
+    padding: 10px; /* Уменьшите padding */
+    border-radius: 15px; /* Уменьшите радиус скругления */
+    border: none;
+    outline: none;
+    font-size: 0.8rem; /* Уменьшите размер шрифта */
 }
 
 .search-bar button {
-    margin-left: -40px; /* Сдвигает кнопку влево */
-    background: none; /* Убирает фон кнопки */
-    border: none; /* Убирает границу кнопки */
-    cursor: pointer; /* Изменяет курсор на указатель при наведении */
-    color: #333; /* Устанавливает цвет текста кнопки */
+    margin-left: -20px; /* Уменьшите сдвиг */
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: #333;
+    font-size: 0.8rem; /* Уменьшите размер шрифта */
 }
+
 
 .icons {
-    display: flex; /* Использует flexbox для выравнивания иконок */
-    align-items: center; /* Выравнивает элементы по вертикали */
+    display: flex;
+    align-items: center;
 }
 
-.icons .cart {
-    display: flex; /* Использует flexbox внутри блока корзины */
-    align-items: center; /* Выравнивает элементы внутри корзины по вертикали */
+.icons .cart, .icons .menu {
+    display: flex;
+    align-items: center;
     text-decoration: none;
-
 }
 
-.icons .cart img {
-    width: 25px; /* Устанавливает ширину иконки корзины */
-    height: 25px; /* Устанавливает высоту иконки корзины */
-    margin-left: 10px; /* Добавляет отступ справа от иконки корзины */
+.icons .cart img, .icons .menu img {
+    width: 20px; /* Уменьшите размер иконок для мобильных устройств */
+    height: 20px;
+    margin-left: 5px;
     opacity: 0.5;
-    
 }
 
-.icons .cart a {
-    font-size: 20px; /* Устанавливает размер шрифта для текста в корзине */
-    font-weight: 1px; /* Устанавливает жирное начертание для текста в корзине */
+.icons .cart a, .icons .menu a {
+    font-size: 1rem;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: black;
     text-decoration: none;
 }
 
-.divider { /* Стиль для разделителя */
-    height: 30px; /* Устанавливает высоту разделителя */
-    width: 2px; /* Устанавливает ширину разделителя */
-    background-color: rgb(0, 0, 0); /* Устанавливает черный цвет фона разделителя */
-    border-radius: 5px; /* Скругляет углы разделителя */
-    margin: 0 30px; /* Добавляет отступы слева и справа от разделителя */
+.divider {
+    height: 25px;
+    width: 2px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 5px;
+    margin: 0 20px;
 }
 
 nav ul {
-    list-style: none; /* Убирает маркеры списка */
-    display: flex; /* Использует flexbox для выравнивания элементов списка по горизонтали */
-    align-items: center; /* Выравнивает элементы списка по вертикали */
+    list-style: none;
+    display: flex;
+    align-items: center;
 }
 
 nav ul li {
-    margin-left: 20px; /* Добавляет отступ слева для каждого элемента списка */
+    margin-left: 15px;
 }
 
 nav ul li a img {
-    width: 30px; /* Устанавливает ширину изображения внутри ссылок */
-    height: 30px; /* Устанавливает высоту изображения внутри ссылок */
-    transition: transform 0.3s, filter 0.3s; /* Добавляет плавные переходы при изменении масштаба и фильтра */
+    width: 25px;
+    height: 25px;
+    transition: transform 0.3s, filter 0.3s;
 }
 
 nav ul li a img:hover {
-    transform: scale(1.1); /* Увеличивает изображение на 10% при наведении */
-    filter: brightness(1.2); /* Увеличивает яркость изображения при наведении */
+    transform: scale(1.1);
+    filter: brightness(1.2);
 }
 
 .responsive-image {
-    max-width: 100%; /* Ограничивает ширину изображения, чтобы оно не выходило за пределы контейнера */
-    height: auto; /* Сохраняет пропорции изображения */
-    display: block; /* Убирает пустое пространство под изображением */
-    margin: 0 auto; /* Центрирует изображение */
-     filter: brightness(1.1) contrast(1.2) saturate(1.2);
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    filter: brightness(1.1) contrast(1.2) saturate(1.2);
 }
 
-.menu {
-    width: 20px; /* Заставляет изображение подстраиваться под ширину родителя */
-    height: 20px; /* Заставляет изображение подстраиваться под высоту родителя */
-    object-fit: contain; /* Сохраняет пропорции изображения */
-    display: block; /* Убирает возможные пустые пространства под изображением */
-    margin: 0 auto; /* Центрирует изображение */
+/* Медиазапросы для адаптивности */
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .search-bar {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .icons {
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    .icons .cart, .icons .menu {
+        margin-top: 10px;
+    }
 }
-
-
-.icons {
-    display: flex; /* Использует flexbox для выравнивания иконок */
-    align-items: center; /* Выравнивает элементы по вертикали */
-}
-
-.icons .menu {
-    display: flex; /* Использует flexbox внутри блока корзины */
-    align-items: center; /* Выравнивает элементы внутри корзины по вертикали */
-    margin-left:;
-}
-
-.icons .menu img {
-    width: 25px; /* Устанавливает ширину иконки корзины */
-    height: 25px; /* Устанавливает высоту иконки корзины */
-    margin-left: 10px; /* Добавляет отступ справа от иконки корзины */
-    opacity: 0.5;
-    
-}
-
